<resources>
    <string name="app_name">OTPApplication</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_otp_on_this_given_mobile_number">We will send you an one time password on this given mobile number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="todo">TODO</string>
    <string name="please_enter_the_otp_sent_to_you">Please Enter the OTP sent to you</string>
    <string name="dashboard">Dashboard</string>
    <string name="log_out">log out</string>
    <string name="_9987456321">9987456321</string>
    <string name="get_otp">GET OTP</string>
</resources>