<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">
     <ImageView
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:src="@drawable/send_mail_2_1"
    android:layout_gravity="center"
    android:layout_marginTop="80dp"
         android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/otp_verification"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/we_will_send_you_an_otp_on_this_given_mobile_number"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="30dp"
        android:text="@string/enter_mobile_number"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/black"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="60dp"
    android:layout_marginEnd="60dp"
    android:background="@drawable/backbox"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginLeft="40dp"
        android:text="+91"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputmobilenumber"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@null"
        android:hint="@string/_9987456321"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textStyle="bold"/>




</LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttongetotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_otp"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            android:layout_margin="30dp"
            android:textColor="@color/white"
            />
        <ProgressBar
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/progressbar_sending_otp"
            android:layout_gravity="center"
            android:visibility="gone"/>


    </FrameLayout>



</LinearLayout>


</ScrollView>