<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Enterotp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/otp3"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/otp_verification"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/please_enter_the_otp_sent_to_you"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        />

   <TextView
       android:id="@+id/textmobileshownumber"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="50dp"
       android:layout_marginTop="4dp"
       android:layout_marginEnd="50dp"
       android:textColor="@color/black"
       android:gravity="center"
       android:textSize="14sp"
       android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:background="@drawable/backbox"
                android:id="@+id/inputotp1"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/backbox"
                android:id="@+id/inputotp2"
                android:layout_width="40dp"
                android:layout_marginStart="4dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:background="@drawable/backbox"
                android:id="@+id/inputotp3"
                android:layout_width="40dp"
                android:layout_marginLeft="4dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:background="@drawable/backbox"
                android:id="@+id/inputotp4"
                android:layout_width="40dp"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/backbox"
                android:id="@+id/inputotp5"
                android:layout_width="40dp"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/backbox"
                android:id="@+id/inputotp6"
                android:layout_width="40dp"
                android:layout_marginLeft="4dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Didn\'t receive the OTP?"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textresendotp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="RESEND OTP AGAIN"
                android:textColor="#01579B"
                android:layout_marginLeft="8dp"
                android:textSize="15sp"
                android:textStyle="bold"/>



        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonverifyotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="VERIFY OTP"
                android:background="@color/black"
                android:layout_margin="30dp"
                android:textColor="@color/white"
                />
            <ProgressBar

                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/progressbar_verify_otp"
                android:layout_gravity="center"
                android:visibility="gone"/>


        </FrameLayout>
    </LinearLayout>

</ScrollView>